Update main to output generated at 440a034

--- a/seminars/index.html
+++ b/seminars/index.html
@@ -94,7 +94,7 @@
         smoothly.
       </p>
       <h2>To do list</h2>
-      <h3>Termly</h3>
+      <h3>Initially</h3>
       <table>
         <thead>
           <tr>
@@ -105,12 +105,23 @@
         <tbody>
           <tr>
             <td>
-              <a href="#get-a-talksbham-account"
-                >Get a <code>talks@bham</code> account</a
+              <a href="#get-a-researchseminarsorg-account"
+                >Get a <code>researchseminars.org</code> account</a
               >
             </td>
             <td>Immediately</td>
           </tr>
+        </tbody>
+      </table>
+      <h3>Termly</h3>
+      <table>
+        <thead>
+          <tr>
+            <th>Task</th>
+            <th>Time</th>
+          </tr>
+        </thead>
+        <tbody>
           <tr>
             <td>
               <a href="#establish-the-seminar-slot"
@@ -125,14 +136,6 @@
           </tr>
           <tr>
             <td>
-              <a href="#add-seminars-to-talksbham"
-                >Add seminars to <code>talks@bham</code></a
-              >
-            </td>
-            <td>Start of term</td>
-          </tr>
-          <tr>
-            <td>
               <a href="#solicit-speaker-suggestions"
                 >Solicit speaker suggestions</a
               >
@@ -141,8 +144,8 @@
           </tr>
           <tr>
             <td>
-              <a href="#advertise-talksbham-functionality"
-                >Advertise <code>talks@bham</code> functionality</a
+              <a href="#advertise-researchseminarsorg-functionality"
+                >Advertise <code>researchseminars.org</code> functionality</a
               >
             </td>
             <td>Start of term</td>
@@ -182,8 +185,8 @@
           </tr>
           <tr>
             <td>
-              <a href="#add-speaker-to-talksbham"
-                >Add speaker to <code>talks@bham</code></a
+              <a href="#add-speaker-to-researchseminarsorg"
+                >Add speaker to <code>researchseminars.org</code></a
               >
             </td>
             <td>When speaker is confirmed</td>
@@ -225,36 +228,39 @@
         </tbody>
       </table>
       <h2>General tasks</h2>
-      <h3>Get a <code>talks@bham</code> account</h3>
+      <h3>Get a <code>researchseminars.org</code> account</h3>
       <p>
         The seminars are listed and advertised on
-        <a href="talks.bham.ac.uk">talks@bham</a>. <code>talks@bham</code> is
-        used for talks all over the university, including some other seminar
-        series in the department, such as the departmental seminar series. Users
+        <a href="https://researchseminars.org">researchseminars.org</a>. Users
         can sign up to email announcements for emails, or subscribe to
-        <code>.ics</code> calendars for series they are interested in.
+        <code>.ics</code> calendars for series they are interested in. Formerly,
+        talks were hosted on <code>talks@bham</code>, but this was deprecated in
+        2024 because it was unmaintained and not compliant with university data
+        and security policies. Allegedly people in EPS are looking at making a
+        better version; it's up to you how invested you get in this saga.
       </p>
       <p>
         If you haven't already got an account, you can sign up using the
-        <a href="http://talks.bham.ac.uk/user/new">Request an account page</a>.
-        Note that you will need to use a <code>bham.ac.uk</code> account
-        otherwise the email won't be sent to you!
+        <a href="https://researchseminars.org/user/register/"
+          >Request an account page</a
+        >. To be able to moderate the seminar page you'll need to be
+        <em>endorsed</em> by an already endorsed user; the previous seminar
+        organiser should be able to do this. If they are otherwise
+        incapacitated, you can
+        <a href="mailto:researchseminars-endorsement@googlegroups.com"
+          >email the research seminars endorsement Google group</a
+        >
+        or in the worst case
+        <a href="mailto:georgejkaye@gmail.com">ask me to do it</a>.
       </p>
       <p>
         Once you have an account, check everything works by
-        <a href="http://talks.bham.ac.uk/login/other_users">logging in</a>. You
-        can also log in by clicking 'Birmingham users' in the left hand bar.
-      </p>
-      <p>
-        <img
-          src="/images/seminars/loggingin.webp"
-          alt="The navigation bar for talks@bham, with 'Birmingham users' circled"
-        />
+        <a href="https://researchseminars.org/user/info">logging in</a>.
       </p>
       <p>
         The talk list we're interested in is the
-        <a href="http://talks.bham.ac.uk/show/index/86"
-          >Theoretical computer science seminar</a
+        <a href="https://researchseminars.org/seminar/TheoryCSBham"
+          >University of Birmingham theoretical computer science seminar</a
         >. Once you have an account, the previous organiser(s) can add you as an
         admin to this list so you can add and modify talks.
       </p>
@@ -284,7 +290,12 @@
         on Fridays.
       </p>
       <p>
-        If the slot changes, you should also let whoever manages the
+        If the slot changes, you should update the <code>Time slot</code> field
+        in the
+        <a
+          href="https://researchseminars.org/edit/seminar/?shortname=TheoryCSBham"
+          >Manage seminar series page</a
+        >, and should also let whoever manages the
         <a href="mailto:cs-calendar@contacts.bham.ac.uk"
           >cs-calendar@contacts.bham.ac.uk</a
         >
@@ -347,26 +358,6 @@
           can add some pictures.)</em
         >
       </p>
-      <h3>Add seminars to <code>talks@bham</code></h3>
-      <p>
-        With the rooms booked, the (unassigned) talks can all be added to
-        <code>talks@bham</code>. You can add a new talk at the
-        <a href="http://talks.bham.ac.uk/talk/edit?list_id=86"
-          >Add a new talk page</a
-        >, which can also be found in the navigation bar on the left of
-        <code>talks@bham</code> once you are logged in.
-      </p>
-      <p>
-        <img
-          src="/images/seminars/adding.webp"
-          alt="The talks@bham navigation bar, with 'Add a new talk' circled"
-        />
-      </p>
-      <p>
-        To make sure it doesn't get forgotten later, you should make sure the
-        Zoom details are added to the page; there's a sheet on the seminar
-        organisation spreadsheet which has a template you can copy.
-      </p>
       <h3>Solicit speaker suggestions</h3>
       <p>
         Send out an email to the Theory mailing list and put a message on the
@@ -394,21 +385,12 @@
         If a host has the funding to host someone from further afield for a
         couple of days, they are of course welcome to do so!
       </p>
-      <h3>Advertise <code>talks@bham</code> functionality</h3>
+      <h3>Advertise <code>researchseminars.org</code> functionality</h3>
       <p>
         It is good to periodically advertise the functionality
-        <code>talks@bham</code> offers for keeping up to date with the seminars.
-        Users can set up email reminders or add the list to their calendar.
-      </p>
-      <p>
-        <img
-          src="/images/seminars/reminders.webp"
-          alt="The top of a seminar list page on talks@bham, with 'Send me email reminders' and 'Subscribe using ical/vcal' circled"
-        />
-      </p>
-      <p>
-        Remember that <code>talks@bham</code> will only send emails to those
-        with <code>bham.ac.uk</code> email addresses!
+        <code>researchseminars.org</code> offers for keeping up to date with the
+        seminars. Users can select 'favourite seminars' and add the list to
+        their calendar.
       </p>
       <h2>Arranging specific seminar slots</h2>
       <p>
@@ -464,28 +446,52 @@
           alt="A row of the theory seminar spreadsheet, filled in with 'George Kaye', 'University of Birmingham', 'g.j.kaye@pgr.bham.ac.uk', 'George' and 'Confirmed' highlighted in green"
         />
       </p>
-      <h3>Add speaker to <code>talks@bham</code></h3>
       <p>
-        At this point you should add the speaker's details to the relevant page
-        on <code>talks@bham</code>, which you should have made earlier. This can
-        be done by clicking the 'Edit this talk' button at the top of the talk
-        page.
+        By default, the seminar should be delivered
+        <strong>using slides</strong>, as this is the easiest way to keep the
+        seminar hybrid. If the speaker would like to do a whiteboard,
+        <strong
+          >it is crucial that you, the organisers, are informed as soon as
+          possible</strong
+        >
+        so that you can make alternative arrangements. At the time of writing
+        LG23 does not have very good whiteboard capture; in the past we have
+        remedied this by booking out
+        <a
+          href="https://intranet.birmingham.ac.uk/as/libraryservices/lrat/technical-advice/rooms-equipped-with-panopto-plus.aspx"
+          >a room in the University with whiteboard capture</a
+        >
+        so this can be streamed online. The School also has an
+        <a href="https://owllabs.com/products/meeting-owl-3">Owl camera</a>
+        which may come in useful; ask someone in Operations about this if you
+        want to use it.
+      </p>
+      <h3>Add speaker to <code>researchseminars.org</code></h3>
+      <p>
+        At this point you should add the speaker's details to the seminar
+        schedule. This can be done by clicking the 'Manage' tab at the top of
+        the <code>researchseminars.org</code> site, and clicking
+        <code>schedule</code> in the relevant seminar row.
       </p>
       <p>
         <img
+          src="/images/seminars/manage.webp"
+          alt="The manage tab of the researchseminars.org interface, showing the theory seminar row with the 'schedule' link in it"
+        />
+      </p>
+      <p>It is then straightforward to put the details in the right slot.</p>
+      <p>
+        <img
           src="/images/seminars/editing.webp"
-          alt="The top of a talks page, with 'Edit this talk' circled"
+          alt="A list of seminars, with the details for George Kaye in the top one"
         />
       </p>
       <h3>Upgrade the talk to the departmental series <em>(optional)</em></h3>
       <p>
         The CS department has a departmental seminar series, aptly named the
         Computer Science Seminar Series; some of these talks are even toted as
-        'Distinguished Seminars'. More details can be found on the
-        <a href="http://talks.bham.ac.uk/show/index/3137"
-          >Computer Science Seminar Series <code>talks@bham</code> page</a
-        >. These seminars are usually followed by refreshments or a buffet lunch
-        in the atrium.
+        'Distinguished Seminars'. These seminars are usually followed by
+        refreshments or a buffet lunch in the atrium.
       </p>
       <p>
         If a host feels that their speaker will appeal to a wider audience than
@@ -506,25 +512,14 @@
         in their series, so they can't afford all the refreshments needed. So
         make sure you ask politely :)
       </p>
-      <p>
-        If a theory seminar talk is upgraded to a departmental seminar, it will
-        eventually appear on their <code>talks@bham</code> page. You can then
-        remove it from the theory seminar list and 'include' the version from
-        the departmental list, which can be done by clicking the appropriate
-        button at the top of the page. This means we don't have two copies of
-        the talk page floating around!
-      </p>
-      <p>
-        <img
-          src="/images/seminars/otherlist.webp"
-          alt="The top of a  page, with 'Add to your list(s)' circled"
-        />
-      </p>
       <h3>Book the speaker a hotel <em>(where appropriate)</em></h3>
       <p>
         If the speaker will be staying overnight, it is cordial to book them a
-        hotel room so that they aren't as much out of pocket. This can be done
-        by sending an email to Research Support at
+        hotel room so that they aren't as much out of pocket. Since January
+        2024, the Theory Group are responsible for managing their own budget, so
+        you should get in touch with the Theme Lead to okay the request. Once
+        they've given it the thumbs up, you can get the hotel booked by sending
+        an email to Research Support at
         <a href="mailto:cs-researchsupport@contacts.bham.ac.uk"
           >cs-researchsupport@contacts.bham.ac.uk</a
         >. Research Support will contact the speaker to confirm their details
@@ -533,13 +528,12 @@
       <h3>Get title and abstract</h3>
       <p>
         The start of the week before the talk, you should make contact with the
-        speaker again for their title and abstract.
-        <code>talks@bham</code> sends out emails at <code>04:06</code> on Sunday
-        giving information about talks in the upcoming week, so ideally the full
-        details of the talk will be in place before then. I also like to request
-        the speaker sends across their slides, making it less stressful to set
-        up in advance, and to remind them that the seminar is 50 minutes plus
-        questions.
+        speaker again for their title and abstract. I also like to request the
+        speaker sends across their slides, making it less stressful to set up in
+        advance, and to remind them that the seminar is 50 minutes plus
+        questions. This can also flag up any miscommunication in which the
+        speaker thinks they are giving a whiteboard talk and they or the host
+        haven't told you.
       </p>
       <p>
         You should cc in the host into this email and let the speaker know that
@@ -552,12 +546,12 @@
         The week of the talk, you should announce the talk both on the theory
         mailing list and on Discord. In the email you should include the title,
         abstract and Zoom details; in the Discord message I tend just to link to
-        the <code>talks@bham</code> page to avoid cluttering the channel.
+        the talk page to avoid cluttering the channel.
       </p>
       <p>
         If you're interested, I have
         <a href="https://github.com/georgejkaye/talks-bot"
-          >a script to generate the emails</a
+          >a script to generate the emails and the Discord messages</a
         >.
       </p>
       <h3>Set up seminar room</h3>
@@ -606,7 +600,9 @@
         >. Their expenses need to go in the top half of the form, i.e.
         <em>not</em> the section labelled 'For project use only'. The
         appropriate codes can be found in the seminar spreadsheet. It is nice to
-        pre-fill out a row to show the speaker how it is done.
+        pre-fill out a row to show the speaker how it is done; I've put some
+        dummy codes in below just in case someone tries to spend all the Theory
+        budget on a night at Snobs.
       </p>
       <p>
         <img
@@ -615,16 +611,15 @@
         />
       </p>
       <p>
-        Once the speaker has filled out the form, they should send it to
-        Research Support at
+        Once the speaker has filled out the form, they should send it to the
+        Theory Theme Lead with you and
         <a href="mailto:cs-researchsupport@contacts.bham.ac.uk"
           >cs-researchsupport@contacts.bham.ac.uk</a
         >
-        with you in cc, stating that they are claiming for the theory seminar.
-        With any luck, the claim will be processed quickly and the speaker will
-        get their money back in a few weeks. (At the time of writing, Research
-        Support are <em>very</em> efficient; this may have changed by the time
-        you are reading this!)
+        in cc. With any luck, the claim will be processed quickly and the
+        speaker will get their money back in a few weeks. (At the time of
+        writing, Research Support are <em>very</em> efficient; this may have
+        changed by the time you are reading this!)
       </p>
       <p>Note that payments are usually made on <em>Fridays</em>.</p>
     </main>
