Update main to output generated at 04c3dad

--- a/seminars/index.html
+++ b/seminars/index.html
@@ -375,11 +375,8 @@
       <p>
         If someone is from further away (e.g. Scotland) then they are likely to
         require a hotel overnight. This <em>is</em> possible and we have done it
-        several times before, but be sure to check this with Research Support at
-        <a href="mailto:cs-researchsupport@contacts.bham.ac.uk"
-          >cs-researchsupport@contacts.bham.ac.uk</a
-        >
-        before you invite anyone.
+        several times before, but be sure to check this with the Theory Theme
+        Lead first before you invite anyone.
       </p>
       <p>
         If a host has the funding to host someone from further afield for a
@@ -401,10 +398,10 @@
       <h3>Negotiate with the host</h3>
       <p>
         When you have some speaker suggestions, send some emails to the
-        prospective hosts offering them <em>one</em> slot from the schedule. If
-        they can't do this one, keep offering until you are both satisfied. This
-        prevents the deadlock of having all the slots 'pending' with nobody
-        replying to you!
+        prospective hosts offering them <em>one</em> slot from the schedule,
+        preferably starting with thei earliest available. If they can't do this
+        one, keep offering until you are both satisfied. This prevents the
+        deadlock of having all the slots 'pending' with nobody replying to you!
       </p>
       <p>
         Make sure the host is aware of their responsibilities to not only
