--- a/lg23/index.html
+++ b/lg23/index.html
@@ -108,7 +108,23 @@
           alt="Controls for the screen in LG23: the 'Display &gt; ON' button is illuminated."
         />
       </p>
-      <p>Start by pressing 'Join' on the zoom terminal:</p>
+      <p>
+        If it's not on, try pressing the 'ON' button on the control panel to see
+        if that shocks the screen into life. If this isn't successful, don't
+        panic: try pressing the power button on the bottom of the screen, and
+        make sure the screen is powered on (the plug is directly beneath it).
+      </p>
+      <p>
+        If the screen is on, it should show a nice picture of Chancellor's Court
+        If it just says 'no signal', this means that someone's messed around
+        with it; there should be an HDMI cable behind the screen that connects
+        the bottom HDMI port to the underside of a box on the wall, which should
+        have some flashing ethernet lights on it.
+      </p>
+      <p>
+        Once you're satisfied that everything is good, start by pressing 'Join'
+        on the zoom terminal:
+      </p>
       <p>
         <img
           src="/images/lg23/join-call.jpg"
