Update main to output generated at a77bd8d

--- a/talks/index.html
+++ b/talks/index.html
@@ -90,6 +90,40 @@
     <main id="text" class="content container wide">
       <div class="card">
         <div class="talk-title">
+          A Fully Compositional Theory of Sequential Digital Circuits
+        </div>
+        <div>
+          <span class="talk-venue">
+            <a
+              href="http://pplv.cs.ucl.ac.uk/pplv_research_seminar/"
+              title="UCL PPLV seminar webpage"
+              >UCL PPLV seminar</a
+            >
+          </span>
+          <span class="talk-date"> February 15, 2024 </span>
+        </div>
+        <div class="talk-buttons">
+          <div>
+            <span class="link-button"
+              ><a
+                href="/files/slides/2024-02-15-ucl-slides.pdf"
+                title="Slides for 'A Fully Compositional Theory of Sequential Digital Circuits"
+                >slides</a
+              ></span
+            >
+            •
+            <span class="link-button"
+              ><a
+                href="https://github.com/georgejkaye?tab=repositories&q=ucl"
+                title="Github repos for 'A Fully Compositional Theory of Sequential Digital Circuits"
+                >github</a
+              ></span
+            >
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="talk-title">
           A Fully Compositional Theory of Digital Circuits
         </div>
         <div>
