Update main to output generated at cc9bf08

--- a/papers/index.html
+++ b/papers/index.html
@@ -135,7 +135,7 @@
             •
             <span class="link-button"
               ><a
-                href="/files/papers/2023-02-19-rewriting-traced-comonoid.pdf"
+                href="/files/papers/rewriting-traced-comonoid.pdf"
                 title="PDF version of 'Rewriting modulo traced comonoid structure' (arxiv version)"
                 >(pdf)</a
               ></span
@@ -143,7 +143,7 @@
             •
             <span class="link-button"
               ><a
-                href="/files/papers/undefined.bib.txt"
+                href="/files/papers/rewriting-traced-comonoid.bib.txt"
                 title="Bibtex entry for 'Rewriting modulo traced comonoid structure'"
                 >bibtex</a
               ></span
@@ -190,7 +190,7 @@
             •
             <span class="link-button"
               ><a
-                href="/files/papers/2023-02-13-compositional-circuits.pdf"
+                href="/files/papers/compositional-circuits.pdf"
                 title="PDF version of 'A compositional theory of digital circuits' (arxiv version)"
                 >(pdf)</a
               ></span
@@ -198,7 +198,7 @@
             •
             <span class="link-button"
               ><a
-                href="/files/papers/undefined.bib.txt"
+                href="/files/papers/compositional-circuits.bib.txt"
                 title="Bibtex entry for 'A compositional theory of digital circuits'"
                 >bibtex</a
               ></span
@@ -239,7 +239,7 @@
             •
             <span class="link-button"
               ><a
-                href="/files/papers/2021-03-19-rewriting.pdf"
+                href="/files/papers/rewriting.pdf"
                 title="PDF version of 'Rewriting Graphically With Symmetric Traced Monoidal Categories' (arxiv version)"
                 >(pdf)</a
               ></span
@@ -247,7 +247,7 @@
             •
             <span class="link-button"
               ><a
-                href="/files/papers/undefined.bib.txt"
+                href="/files/papers/rewriting.bib.txt"
                 title="Bibtex entry for 'Rewriting Graphically With Symmetric Traced Monoidal Categories'"
                 >bibtex</a
               ></span
@@ -273,7 +273,7 @@
         <div class="paper-details">
           Masters dissertation (2019), University of Birmingham
         </div>
-        <div id="2019-04-08-masters.pdf-abstract" class="paper-abstract">
+        <div id="undefined-abstract" class="paper-abstract">
           We detail the development of a set of tools to aid in the research of
           the topological properties of linear λ-terms when they are represented
           as 3-valent rooted maps.
@@ -286,7 +286,7 @@
             •
             <span class="link-button"
               ><a
-                href="/files/papers/2019-04-08-masters.pdf"
+                href="/files/papers/masters.pdf"
                 title="PDF version of 'A visualiser for linear lambda-terms as rooted 3-valent maps'"
                 >pdf</a
               ></span
@@ -294,7 +294,7 @@
             •
             <span class="link-button"
               ><a
-                href="/files/papers/2019-04-08-masters.pdf.bib.txt"
+                href="/files/papers/masters.bib.txt"
                 title="Bibtex entry for 'A visualiser for linear lambda-terms as rooted 3-valent maps'"
                 >bibtex</a
               ></span
