Update main to output generated at e6d3384

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
       <h2>Contact me</h2>
       <ul>
         <li>
-          <strong>University email:</strong> g.j.kaye at
-          <a href="http://pgr.bham.ac.uk">pgr.bham.ac.uk</a>
+          <strong>University email:</strong>
+          <a href="mailto:g.j.kaye@pgr.bham.ac.uk">g.j.kaye@pgr.bham.ac.uk</a>
         </li>
         <li>
           <strong>Address:</strong> Office 218, School of Computer Science,
