Update main to output generated at d70f341

--- a/index.html
+++ b/index.html
@@ -111,8 +111,11 @@
         <a
           href="https://www.birmingham.ac.uk/research/activity/computer-science/theory-of-computation"
           >University of Birmingham Theory Group</a
-        >, and organise the research group's
-        <a href="http://talks.bham.ac.uk/show/index/86">weekly seminar</a>.
+        >, and helped run the
+        <a href="https://researchseminars.org/seminar/TheoryCSBham"
+          >weekly seminar</a
+        >
+        from March 2022 to March 2024.
       </p>
       <p>
         I also used to work part time at the
@@ -125,19 +128,27 @@
         My primary research interests are in graphical calculi for compositional
         systems and the lambda calculus using monoidal categories, and reasoning
         about these structures diagrammatically using
-        <em>string diagrams</em> and <em>graph rewriting</em>. Currently I am
-        working on developing the
-        <em
-          >categorical semantics for digital circuits with delay and
-          feedback</em
-        >
-        first presented by
+        <a href="https://doi.org/10.48550/arXiv.0908.3347">string diagrams</a>.
+      </p>
+      <p>
+        I am currently writing up my PhD thesis on
+        <strong
+          >a fully compositional theory of sequential digital circuits with
+          delay and feedback</strong
+        >. This project is based on work by
         <a href="https://doi.org/10.4230/LIPIcs.CSL.2017.24">Ghica and Jung</a>
-        using
+        who modelled digital circuits as morphisms in a
         <a href="https://en.wikipedia.org/wiki/Traced_monoidal_category"
-          >symmetric traced monoidal categories</a
-        >. This gives us a <em>graphical calculus</em> with which we can reason
-        about circuits <em>syntactically</em>.
+          >symmetric traced monoidal category</a
+        >. My job was to tidy this all up and make it formal, leading to three
+        sound and complete semantics for sequential circuits: a
+        <strong>denotational</strong> semantics of monotone stream functions, a
+        reductions-based <strong>operational semantics</strong>, and an
+        <strong>algebraic semantics</strong>. Using recent work on
+        <a href="https://doi.org/10.1145/3502719"
+          >string diagram graph rewriting</a
+        >, this gives us a framework suitable for performing
+        <strong>graph rewriting</strong> on digital circuits.
       </p>
       <p>
         When I'm not researching, I play the piano and go on adventures usually
@@ -145,8 +156,7 @@
         things and put them on
         <a href="https://instagram.com/georgejkaye">Instagram</a>. If you want
         something less pretty, here are some
-        <a href="/pictures">pictures of me</a>! I also use
-        <a href="https://twitter.com/thegeorgejkaye">Twitter</a>.
+        <a href="/pictures">pictures of me</a>!
       </p>
       <p>You might want to read <a href="/files/cv.pdf">my CV</a>.</p>
       <h2>Contact me</h2>
@@ -193,14 +203,14 @@
           >
         </li>
         <li>
-          <a href="/adventures"><strong>Adventures in Academia</strong></a>
-          <em>A series of entertaining escapades</em>
+          <a href="/adventures"><strong>Adventures in Academia</strong></a> A
+          series of entertaining escapades
         </li>
         <li>
           <a href="/trains/stations/A"
             ><strong>Railway station signs</strong></a
           >
-          <em>I take pictures of station signs</em>
+          I take pictures of station signs
         </li>
       </ul>
       <p>I like doing little coding projects: here are some of them:</p>
@@ -214,7 +224,7 @@
           <a href="https://blanket.georgejkaye.com"
             ><strong>Blanket visualiser</strong></a
           >
-          <em>Following the progress of a temperature blanket</em>
+          Following the progress of a temperature blanket
         </li>
       </ul>
       <p>
