Update main to output generated at 0e78bfc

--- a/lamviz/index.html
+++ b/lamviz/index.html
@@ -102,12 +102,12 @@
       <h2>Documents</h2>
       <ul>
         <li>
-          <a href="/files/papers/2019-04-08-masters.pdf">Dissertation</a> This
-          is my dissertation for my Masters degree.
+          <a href="/files/papers/masters.pdf">Dissertation</a> This is my
+          dissertation for my Masters degree.
         </li>
         <li>
-          <a href="/files/talks/2019-07-01-cla.pdf">CLA 2019 talk</a> These
-          tools were presented at
+          <a href="/files/slides/2019-07-01-cla19-slides.pdf">CLA 2019 talk</a>
+          These tools were presented at
           <a href="http://cla.tcs.uj.edu.pl/history/2019/">CLA 2019</a>!
         </li>
       </ul>
