--- a/talks/index.html
+++ b/talks/index.html
@@ -95,6 +95,40 @@
         <div>
           <span class="talk-venue">
             <a
+              href="https://bctcs2024.github.io/"
+              title="5th Meeting of the Southern and Midlands Logic Seminar webpage"
+              >5th Meeting of the Southern and Midlands Logic Seminar</a
+            >
+          </span>
+          <span class="talk-date"> April 05, 2024 </span>
+        </div>
+        <div class="talk-buttons">
+          <div>
+            <span class="link-button"
+              ><a
+                href="/files/slides/2024-04-05-smls5-slides.pdf"
+                title="Slides for 'A Fully Compositional Theory of Sequential Digital Circuits"
+                >slides</a
+              ></span
+            >
+            •
+            <span class="link-button"
+              ><a
+                href="https://github.com/georgejkaye?tab=repositories&q=smls5"
+                title="Github repos for 'A Fully Compositional Theory of Sequential Digital Circuits"
+                >github</a
+              ></span
+            >
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="talk-title">
+          A Fully Compositional Theory of Sequential Digital Circuits
+        </div>
+        <div>
+          <span class="talk-venue">
+            <a
               href="http://pplv.cs.ucl.ac.uk/pplv_research_seminar/"
               title="UCL PPLV seminar webpage"
               >UCL PPLV seminar</a
