Update main to output generated at b575f21

--- a/lg23/index.html
+++ b/lg23/index.html
@@ -115,11 +115,11 @@
         make sure the screen is powered on (the plug is directly beneath it).
       </p>
       <p>
-        If the screen is on, it should show a nice picture of Chancellor's Court
-        If it just says 'no signal', this means that someone's messed around
-        with it; there should be an HDMI cable behind the screen that connects
-        the bottom HDMI port to the underside of a box on the wall, which should
-        have some flashing ethernet lights on it.
+        If the screen is on, it should show a nice picture of Chancellor's
+        Court. If it just says 'no signal', this means that someone's messed
+        around with it; there should be an HDMI cable behind the screen that
+        connects the bottom HDMI port to the underside of a box on the wall,
+        which should have some flashing ethernet lights on it.
       </p>
       <p>
         Once you're satisfied that everything is good, start by pressing 'Join'
@@ -174,23 +174,14 @@
         the conventional computer to present. If using the latter, you'll need
         to log on using your university credentials. The process is otherwise
         the same for both: connect to the zoom call using the above details and
-        then the speaker can screenshare. There is a 'smart' webcam that can
-        follow the speaker around the room: just use the silver USB cable.
-        (Hopefully the speaker has a USB-A port or appropriate dongle: the
-        former are few and far between these days!)
-      </p>
-      <p>
-        <img
-          src="/images/lg23/webcam.jpg"
-          alt="My hand holds up a silver usb cable."
-        />
+        then the speaker can screenshare.
       </p>
       <p>
         Now you can make sure the speaker is screen sharing correctly and that
         they can change slides and so on. Once this is done, the 'speaker
         thumbnail' in the corner of the screen needs to be disabled, as it can
-        get in the way for the physical participants. To do this, select 'View'
-        from the meeting controls:
+        get in the way of the slides for the physical participants. To do this,
+        select 'View' from the meeting controls:
       </p>
       <p>
         <img
