--- a/lg23/index.html
+++ b/lg23/index.html
@@ -117,9 +117,11 @@
       <p>
         If the screen is on, it should show a nice picture of Chancellor's
         Court. If it just says 'no signal', this means that someone's messed
-        around with it; there should be an HDMI cable behind the screen that
-        connects the bottom HDMI port to the underside of a box on the wall,
-        which should have some flashing ethernet lights on it.
+        around with it and unplugged something. The video data from the zoom
+        computer comes from a box on the wall behind the screen with some
+        flashing ethernet lights on it. Connect an HDMI cable from the HDMI1
+        port on the back of the screen (hopefully one is still plugged in!) to
+        the HDMI port on the underside of this box.
       </p>
       <p>
         Once you're satisfied that everything is good, start by pressing 'Join'
