Update main to output generated at 01604a6

--- a/index.html
+++ b/index.html
@@ -226,6 +226,12 @@
           >
           Following the progress of a temperature blanket
         </li>
+        <li>
+          <a href="https://delayrepay.georgejkaye.com"
+            ><strong>Delay Repay Calculator</strong></a
+          >
+          Work out how much delay repay you'll get
+        </li>
       </ul>
       <p>
         I've made some guides to impart the admin knowledge I've gained from
