Update main to output generated at 1b28883

--- a/trains/scenarios/1W13/index.html
+++ b/trains/scenarios/1W13/index.html
@@ -82,10 +82,7 @@
       <div class="header-bar">
         <div class="header-bar-content container">
           <div class="title-bar">
-            <h1 class="title">
-              1W13 0650 <br />
-              London Paddington to Great Malvern
-            </h1>
+            <h1 class="title"></h1>
 
             <div class="subtitle"></div>
           </div>
