--- a/trains/scenarios/1Z56/index.html
+++ b/trains/scenarios/1Z56/index.html
@@ -80,10 +80,7 @@
       <div class="header-bar">
         <div class="header-bar-content container">
           <div class="title-bar">
-            <h1 class="title">
-              1Z56 1700 <br />
-              Exeter St Davids to Paignton
-            </h1>
+            <h1 class="title"></h1>
 
             <div class="subtitle"></div>
           </div>
