--- a/pictures/index.html
+++ b/pictures/index.html
@@ -80,7 +80,7 @@
       <div class="header-bar">
         <div class="header-bar-content container">
           <div class="title-bar">
-            <h1 class="title">Pictures</h1>
+            <h1 class="title"></h1>
 
             <div class="subtitle">Some pictures of me through the years</div>
           </div>
