--- a/trains/scenarios/1A15/index.html
+++ b/trains/scenarios/1A15/index.html
@@ -80,10 +80,7 @@
       <div class="header-bar">
         <div class="header-bar-content container">
           <div class="title-bar">
-            <h1 class="title">
-              1A15 1948 <br />
-              Brighton to London Victoria
-            </h1>
+            <h1 class="title"></h1>
 
             <div class="subtitle"></div>
           </div>
