--- a/trains/scenarios/1V41/index.html
+++ b/trains/scenarios/1V41/index.html
@@ -82,10 +82,7 @@
       <div class="header-bar">
         <div class="header-bar-content container">
           <div class="title-bar">
-            <h1 class="title">
-              1V41 0642 <br />
-              Birmingham New Street to Paignton
-            </h1>
+            <h1 class="title"></h1>
 
             <div class="subtitle"></div>
           </div>
