--- a/trains/scenarios/2G85/index.html
+++ b/trains/scenarios/2G85/index.html
@@ -80,10 +80,7 @@
       <div class="header-bar">
         <div class="header-bar-content container">
           <div class="title-bar">
-            <h1 class="title">
-              2G85 1336 <br />
-              Swindon to Cheltenham Spa
-            </h1>
+            <h1 class="title"></h1>
 
             <div class="subtitle"></div>
           </div>
