--- a/trains/scenarios/2M12/index.html
+++ b/trains/scenarios/2M12/index.html
@@ -80,10 +80,7 @@
       <div class="header-bar">
         <div class="header-bar-content container">
           <div class="title-bar">
-            <h1 class="title">
-              2M12 1410 <br />
-              Frome to Swindon
-            </h1>
+            <h1 class="title"></h1>
 
             <div class="subtitle"></div>
           </div>
