--- a/trains/scenarios/2P04/index.html
+++ b/trains/scenarios/2P04/index.html
@@ -82,10 +82,7 @@
       <div class="header-bar">
         <div class="header-bar-content container">
           <div class="title-bar">
-            <h1 class="title">
-              2P04 0912 <br />
-              Longbridge to Lichfield Trent Valley
-            </h1>
+            <h1 class="title"></h1>
 
             <div class="subtitle"></div>
           </div>
