Update main to output generated at f14f439

--- a/talks/index.html
+++ b/talks/index.html
@@ -95,6 +95,41 @@
         <div>
           <span class="talk-venue">
             <a
+              href="https://oxford24.github.io/"
+              title="7th International Conference on Applied Category Theory (ACT 2024) webpage"
+              >7th International Conference on Applied Category Theory (ACT
+              2024)</a
+            >
+          </span>
+          <span class="talk-date"> June 21, 2024 </span>
+        </div>
+        <div class="talk-buttons">
+          <div>
+            <span class="link-button"
+              ><a
+                href="/files/slides/2024-06-21-act2024-slides.pdf"
+                title="Slides for 'A Fully Compositional Theory of Sequential Digital Circuits"
+                >slides</a
+              ></span
+            >
+            •
+            <span class="link-button"
+              ><a
+                href="https://github.com/georgejkaye?tab=repositories&q=act2024"
+                title="Github repos for 'A Fully Compositional Theory of Sequential Digital Circuits"
+                >github</a
+              ></span
+            >
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="talk-title">
+          A Fully Compositional Theory of Sequential Digital Circuits
+        </div>
+        <div>
+          <span class="talk-venue">
+            <a
               href="https://bctcs2024.github.io/"
               title="5th Meeting of the Southern and Midlands Logic Seminar webpage"
               >5th Meeting of the Southern and Midlands Logic Seminar</a
@@ -505,6 +540,20 @@
         </div>
       </div>
       <h3>Visits</h3>
+      <div class="card">
+        <div class="visit-venue">
+          <a
+            href="https://oxford24.github.io/"
+            title="7th International Conference on Applied Category Theory (ACT 2024) webpage"
+            >7th International Conference on Applied Category Theory (ACT
+            2024)</a
+          >
+        </div>
+        <div>
+          <span class="visit-city">Oxford</span>
+          <span class="visit-dates">17-21 June 2024</span>
+        </div>
+      </div>
       <div class="card">
         <div class="visit-venue">
           <a
