Update main to output generated at c536f22

--- a/trains/scenarios/1A15/index.html
+++ b/trains/scenarios/1A15/index.html
@@ -78,7 +78,10 @@
         </div>
       </div>
       <div class="header-bar-content container">
-        <h1 class="title"></h1>
+        <h1 class="title">
+          1A15 1948 <br />
+          Brighton to London Victoria
+        </h1>
 
         <div class="subtitle"></div>
       </div>
