--- a/trains/scenarios/1D13/index.html
+++ b/trains/scenarios/1D13/index.html
@@ -78,7 +78,10 @@
         </div>
       </div>
       <div class="header-bar-content container">
-        <h1 class="title"></h1>
+        <h1 class="title">
+          1D13 0824 <br />
+          London Waterloo to Dorking
+        </h1>
 
         <div class="subtitle"></div>
       </div>
