--- a/trains/scenarios/1Z56/index.html
+++ b/trains/scenarios/1Z56/index.html
@@ -78,7 +78,10 @@
         </div>
       </div>
       <div class="header-bar-content container">
-        <h1 class="title"></h1>
+        <h1 class="title">
+          1Z56 1700 <br />
+          Exeter St Davids to Paignton
+        </h1>
 
         <div class="subtitle"></div>
       </div>
