--- a/fancam/index.html
+++ b/fancam/index.html
@@ -78,7 +78,7 @@
         </div>
       </div>
       <div class="header-bar-content container">
-        <h1 class="title"></h1>
+        <h1 class="title">Fancam</h1>
 
         <div class="subtitle"></div>
       </div>
