--- a/trains/scenarios/1J93/index.html
+++ b/trains/scenarios/1J93/index.html
@@ -78,7 +78,10 @@
         </div>
       </div>
       <div class="header-bar-content container">
-        <h1 class="title"></h1>
+        <h1 class="title">
+          1J93 1807 <br />
+          London Paddington to Frome
+        </h1>
 
         <div class="subtitle"></div>
       </div>
