--- a/trains/scenarios/1P32/index.html
+++ b/trains/scenarios/1P32/index.html
@@ -78,7 +78,10 @@
         </div>
       </div>
       <div class="header-bar-content container">
-        <h1 class="title"></h1>
+        <h1 class="title">
+          1P32 1501 <br />
+          Oxford to London Paddington
+        </h1>
 
         <div class="subtitle"></div>
       </div>
