--- a/trains/scenarios/1V06/index.html
+++ b/trains/scenarios/1V06/index.html
@@ -78,7 +78,10 @@
         </div>
       </div>
       <div class="header-bar-content container">
-        <h1 class="title"></h1>
+        <h1 class="title">
+          1V06 0907 <br />
+          Nottingham to Cardiff Central
+        </h1>
 
         <div class="subtitle"></div>
       </div>
