--- a/trains/scenarios/1W13/index.html
+++ b/trains/scenarios/1W13/index.html
@@ -80,7 +80,10 @@
         </div>
       </div>
       <div class="header-bar-content container">
-        <h1 class="title"></h1>
+        <h1 class="title">
+          1W13 0650 <br />
+          London Paddington to Great Malvern
+        </h1>
 
         <div class="subtitle"></div>
       </div>
