--- a/trains/scenarios/2G85/index.html
+++ b/trains/scenarios/2G85/index.html
@@ -78,7 +78,10 @@
         </div>
       </div>
       <div class="header-bar-content container">
-        <h1 class="title"></h1>
+        <h1 class="title">
+          2G85 1336 <br />
+          Swindon to Cheltenham Spa
+        </h1>
 
         <div class="subtitle"></div>
       </div>
