--- a/trains/scenarios/2J69/index.html
+++ b/trains/scenarios/2J69/index.html
@@ -78,7 +78,10 @@
         </div>
       </div>
       <div class="header-bar-content container">
-        <h1 class="title"></h1>
+        <h1 class="title">
+          2J69 1540 <br />
+          London Bridge to West Croydon
+        </h1>
 
         <div class="subtitle"></div>
       </div>
