--- a/trains/scenarios/2M12/index.html
+++ b/trains/scenarios/2M12/index.html
@@ -78,7 +78,10 @@
         </div>
       </div>
       <div class="header-bar-content container">
-        <h1 class="title"></h1>
+        <h1 class="title">
+          2M12 1410 <br />
+          Frome to Swindon
+        </h1>
 
         <div class="subtitle"></div>
       </div>
