--- a/trains/scenarios/2P04/index.html
+++ b/trains/scenarios/2P04/index.html
@@ -80,7 +80,10 @@
         </div>
       </div>
       <div class="header-bar-content container">
-        <h1 class="title"></h1>
+        <h1 class="title">
+          2P04 0912 <br />
+          Longbridge to Lichfield Trent Valley
+        </h1>
 
         <div class="subtitle"></div>
       </div>
